--- a/Terms_5.1.html
+++ b/Terms_5.1.html
@@ -25,10 +25,23 @@
     .vbt-terms .vbt-summary:hover { transform: translateY(-1px); }
     .vbt-terms .vbt-summary:focus-visible { outline: 2px solid #fe0100; outline-offset: 2px; }
     /* פתיחה: הקפסולה מתחלפת לירקרק */
-    .vbt-terms .vbt-toggle:checked + .vbt-summary { background: #D7F6E4; box-shadow: 0 6px 16px rgba(0,0,0,.06), inset 0 1px 0 rgba(255,255,255,.6), inset 0 0 0 1px rgba(0,0,0,.04); }
+    .vbt-terms .vbt-toggle:checked + .vbt-summary {
+      background: #D7F6E4;
+      box-shadow: 0 6px 16px rgba(0,0,0,.06), inset 0 1px 0 rgba(255,255,255,.6), inset 0 0 0 1px rgba(0,0,0,.04);
+    }
 
-    /* כותרת במרכז */
-    .vbt-terms .vbt-title { flex: 1 1 auto; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; text-align: center; }
+    /* כותרת במרכז – שבירה עד שתי שורות (צפוף יותר) */
+    .vbt-terms .vbt-title{
+      flex: 1 1 auto;
+      text-align: center;
+      line-height: 1.1;              /* פחות רווח בין שורות */
+      white-space: normal;           /* מאפשר שבירה */
+      overflow: hidden;              /* מסתיר עודפים */
+      display: -webkit-box;          /* תומך ב־line-clamp */
+      -webkit-line-clamp: 2;         /* עד 2 שורות */
+      -webkit-box-orient: vertical;
+      max-height: calc(1.1em * 2);   /* גובה מדויק לשתי שורות */
+    }
 
     /* i – בימין: אדום בסגור, ירוק + סיבוב בפתוח */
     .vbt-terms .vbt-icon {
@@ -58,7 +71,9 @@
     .vbt-terms .vbt-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(320px,1fr)); gap: 18px; max-width: 1000px; margin: 0 auto; }
 
     /* העדפת נגישות – פחות תנועה */
-    @media (prefers-reduced-motion: reduce) { .vbt-terms .vbt-panel, .vbt-terms .vbt-icon, .vbt-terms .vbt-summary { transition: none; } }
+    @media (prefers-reduced-motion: reduce) {
+      .vbt-terms .vbt-panel, .vbt-terms .vbt-icon, .vbt-terms .vbt-summary { transition: none; }
+    }
   </style>
 </head>
 <body style="margin:0;">
@@ -331,17 +346,4 @@
   function tick(){ requestAnimationFrame(sendHeight); }
   window.addEventListener('DOMContentLoaded', tick);
   window.addEventListener('load', tick);
-  window.addEventListener('transitionrun', function(){ burst(700); }, true);
-  window.addEventListener('transitionend', function(){ setTimeout(sendHeight, 80); }, true);
-  window.addEventListener('change', function(e){ if (e.target && e.target.classList && e.target.classList.contains('vbt-toggle')) burst(800); }, true);
-  window.addEventListener('click', function(){ setTimeout(sendHeight, 140); }, true);
-
-  var hb = setInterval(sendHeight, 1800);
-  window.addEventListener('pagehide', function(){ clearInterval(hb); });
-
-  sendHeight();
-})();
-</script>
-
-</body>
-</html>
+  window.addEventListener('transitionrun', function(){ burst
